# qty

./: .gitignore  README.md  flake.nix  ghcid
qty/: qty.cabal
qty/app/: Main.hs
qty/src/Qty/: Cli.hs  Client.hs  Host.hs  Types.hs
